add `DELETE /doctor/practice-location/{location_id}`
